[package]
name = "cpace"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.14"
curve25519-dalek = "2.0.0"
hkdf = "0.8"
rand_core = "0.5"
sha2 = "0.8.1"

[dev-dependencies]
rand = "0.7"