[package]
name = "cpace"
# Before bumping version:
# - update html_root_url
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "BSD-3-Clause"
description = "An implementation of the CPace password-authenticated key exchange (PAKE)."
repository = "https://github.com/hdevalence/cpace"
readme = "README.md"
keywords = ["crypto", "cryptography", "ristretto", "pake", "cpace"]

[dependencies]
thiserror = "1.0.14"
curve25519-dalek = "2.0.0"
hkdf = "0.8"
rand_core = "0.5"
sha2 = "0.8.1"

[dev-dependencies]
rand = "0.7"
